[package]
name = "lens"
version = "0.1.0"
authors = ["unixpariah"]
license = "MIT"
edition = "2021"
description = "Command line fuzzy finder"
repository = "https://github.com/unixpariah/lens"
keywords = ["terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
ratatui = "0.25.0"
tui-textarea = "0.4.0"
